facet-json/tests/integration/snapshots/r#mod__integration__err__deserialize_tuple_empty_nested_from_1tup_nested.snap
---
source: facet-json/tests/integration/err.rs
expression: err
---
[31mError:[0m Error at [33m$[?][39m
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:1:3 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m[[0m[38;5;249m[[0m[31m1[0m[31m0[0m[38;5;249m][0m[38;5;249m][0m
 [38;5;240m  │[0m   [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m    [31m╰[0m[31m─[0m[31m─[0m Unsupported type: got [31m()[39m, wanted [32mempty array[39m
[38;5;246m───╯[0m
