facet-json/tests/integration/snapshots/r#mod__integration__err__deserialize_tuple_empty_nested_from_empty_nested_2x.snap
---
source: facet-json/tests/integration/err.rs
expression: err
snapshot_kind: text
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:1:3 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m[[0m[38;5;249m[[0m[31m[[0m[38;5;249m][0m[38;5;249m][0m[38;5;249m][0m
 [38;5;240m  │[0m   [31m┬[0m  
 [38;5;240m  │[0m   [31m╰[0m[31m─[0m[31m─[0m Operation failed on shape [34m()[39m: cannot push elements to unit type ()
[38;5;246m───╯[0m
