facet-json/tests/integration/snapshots/r#mod__integration__err__deserialize_tuple_wrong_size_one_too_many.snap
---
source: facet-json/tests/integration/err.rs
expression: err
---
[31mError:[0m Error at [33m$[39m
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:1:4 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m[[0m[38;5;249m1[0m[38;5;249m0[0m[31m,[0m[38;5;249m2[0m[38;5;249m0[0m[38;5;249m][0m
 [38;5;240m  │[0m    [31m┬[0m  
 [38;5;240m  │[0m    [31m╰[0m[31m─[0m[31m─[0m Field error for shape (i32): No such static field
[38;5;246m───╯[0m
