facet-json/tests/integration/snapshots/r#mod__integration__err__unknown_field_with_rename.snap
---
source: facet-json/tests/integration/err.rs
expression: err
---
[31mError:[0m Error at [33m$[0m
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:1:3 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m{[0m[38;5;249m"[0m[31mw[0m[31mr[0m[31mo[0m[31mn[0m[31mg[0m[31m_[0m[31mn[0m[31ma[0m[31mm[0m[31me[0m[38;5;249m"[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m"[0m[38;5;249m}[0m
 [38;5;240m  │[0m   [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m        [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Unknown field: wrong_name
[38;5;246m───╯[0m
